# b5auth-fastapi

./: .env  .gitignore  README.md  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: cda1df72a9eb_add_user_model.py  ee1cf5fb6a63_add_sessions_table.py
app/: constants.py  database.py  dependencies.py  models.py  utils.py
app/routers/: __init__.py  auth.py
app/routers/auth/: auth.py  basic.py
app/schemas/: __init__.py  auth.py
